# mail-listener

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: com.mail-listener.gmail-imap-idle.plist
docs/: GITHUB_METADATA.md  architecture.md
examples/: sample-event.json
scripts/: bootstrap.sh  gmail_idle_ctl.sh
skills/: README.md
src/mail_ingress_kit/: __init__.py
src/mail_ingress_kit/adapters/: __init__.py
src/mail_ingress_kit/core/: __init__.py
src/mail_ingress_kit/events/: __init__.py
src/mail_ingress_kit/skills/: __init__.py
src/mail_listener/: __init__.py  __main__.py
src/mail_listener/adapters/: __init__.py
src/mail_listener/adapters/gmail/: __init__.py  idle.py
src/mail_listener/cli/: main.py
src/mail_listener/core/: __init__.py  config.py  models.py
src/mail_listener/events/: __init__.py  models.py
tests/: test_gmail_idle.py  test_smoke.py
